--- a/Loxodon.Framework.Log4Net/Assets/LoxodonFramework/Log4Net/package.json
+++ b/Loxodon.Framework.Log4Net/Assets/LoxodonFramework/Log4Net/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.vovgou.loxodon-framework-log4net",
   "displayName": "Loxodon Framework Log4Net",
-  "version": "2.0.1-preview",
+  "version": "2.0.1",
   "unity": "2018.4",
   "description": "This is a plugin for the logging feature of Loxodon.Framework, which helps you use Log4Net in your Unity project.",  
   "license": "MIT",
@@ -27,7 +27,7 @@
   "category": "GUI",
   "relatedPackages": {},
   "dependencies": {
-    "com.vovgou.loxodon-framework": "2.0.1-preview"
+    "com.vovgou.loxodon-framework": "2.0.1"
   },
   "samples": [
     {
