Fixed a bug for Loxdon.Framework.Log4Net.

--- a/Loxodon.Framework.Log4Net/Assets/LoxodonFramework/Log4Net/Editor/Log4Net/Loxodon.Log.Log4Net.Editor.asmdef
+++ b/Loxodon.Framework.Log4Net/Assets/LoxodonFramework/Log4Net/Editor/Log4Net/Loxodon.Log.Log4Net.Editor.asmdef
@@ -5,7 +5,9 @@
         "Loxodon.Log.Log4Net"
     ],
     "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
