Fixed the conflict of dependency library Mono.Cecil.dll.

--- a/Loxodon.Framework.Fody/Assets/LoxodonFramework/Fody/Plugins/Editor/Loxodon.Framework.Fody.asmdef
+++ b/Loxodon.Framework.Fody/Assets/LoxodonFramework/Fody/Plugins/Editor/Loxodon.Framework.Fody.asmdef
@@ -7,8 +7,14 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Mono.Cecil.dll",
+        "Mono.Cecil.Pdb.dll",
+        "Mono.Cecil.Rocks.dll",
+        "FodyHelpers.dll",
+        "PropertyChanged.Fody.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": []
 }
