--- a/Loxodon.Framework.Log4Net/Assets/LoxodonFramework/Log4Net/Runtime/Loxodon.Log.Log4Net.asmdef
+++ b/Loxodon.Framework.Log4Net/Assets/LoxodonFramework/Log4Net/Runtime/Loxodon.Log.Log4Net.asmdef
@@ -7,8 +7,10 @@
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "log4net.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": []
 }
