Updated Loxodon.Framework.Fody to v2.4.4.Optimized plugin dependencies.

--- a/Loxodon.Framework.Fody/Assets/LoxodonFramework/Fody/Plugins/Editor/Loxodon.Framework.Fody.asmdef
+++ b/Loxodon.Framework.Fody/Assets/LoxodonFramework/Fody/Plugins/Editor/Loxodon.Framework.Fody.asmdef
@@ -12,8 +12,7 @@
         "Mono.Cecil.dll",
         "Mono.Cecil.Pdb.dll",
         "Mono.Cecil.Rocks.dll",
-        "FodyHelpers.dll",
-        "PropertyChanged.Fody.dll"
+        "FodyHelpers.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": []
