Upgrade fody to version 6.6.3 To avoid compatibility issues with Mono.Cecil.dll between multiple asset packages, use Assembly.Load() to load assemblies.

--- a/Loxodon.Framework.Fody/Assets/LoxodonFramework/Fody/Plugins/Editor/Loxodon.Framework.Fody.asmdef
+++ b/Loxodon.Framework.Fody/Assets/LoxodonFramework/Fody/Plugins/Editor/Loxodon.Framework.Fody.asmdef
@@ -7,13 +7,8 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": true,
-    "precompiledReferences": [
-        "Mono.Cecil.dll",
-        "Mono.Cecil.Pdb.dll",
-        "Mono.Cecil.Rocks.dll",
-        "FodyHelpers.dll"
-    ],
+    "overrideReferences": false,
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": []
 }
