--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,6 @@ jobs:
       - name: Publish Loxodon.Framework
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework/Assets/LoxodonFramework
-          /bin/cp -f $GITHUB_WORKSPACE/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -30,7 +29,6 @@ jobs:
       - name: Publish Loxodon.Framework.Addressable
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework.Addressable/Assets/LoxodonFramework/Addressable
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.Addressable/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -40,7 +38,6 @@ jobs:
       - name: Publish Loxodon.Framework.Connection
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework.Connection/Assets/LoxodonFramework/Connection
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.Connection/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -50,7 +47,6 @@ jobs:
       - name: Publish Loxodon.Framework.FairyGUI
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework.FairyGUI/Assets/LoxodonFramework/FairyGUI
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.FairyGUI/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -60,7 +56,6 @@ jobs:
       - name: Publish Loxodon.Framework.ILRuntime
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework.ILRuntime/Assets/LoxodonFramework/ILRuntime
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.ILRuntime/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -70,7 +65,6 @@ jobs:
       - name: Publish Loxodon.Framework.LocalizationsForCsv
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework.LocalizationsForCsv/Assets/LoxodonFramework/LocalizationsForCsv
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.LocalizationsForCsv/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -80,7 +74,6 @@ jobs:
       - name: Publish Loxodon.Framework.Log4Net
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework.Log4Net/Assets/LoxodonFramework/Log4Net
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.Log4Net/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -90,7 +83,6 @@ jobs:
       - name: Publish Loxodon.Framework.Obfuscation
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework.Obfuscation/Assets/LoxodonFramework/Obfuscation
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.Obfuscation/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -100,7 +92,6 @@ jobs:
       - name: Publish Loxodon.Framework.UIToolkit
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework.UIToolkit/Assets/LoxodonFramework/UIToolkit
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.UIToolkit/README.md  ./
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
@@ -109,11 +100,56 @@ jobs:
 
       - name: Publish Loxodon.Framework.Fody
         run: |
-          cd $GITHUB_WORKSPACE/Loxodon.Framework.Fody/Assets/LoxodonFramework/Fody
-          /bin/cp -f $GITHUB_WORKSPACE/Loxodon.Framework.Fody/README.md  ./
+          cd $GITHUB_WORKSPACE/Loxodon.Framework.Fody/Packages/com.vovgou.loxodon-framework-fody
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish
         env:
           CI: true
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-        
+
+      - name: Publish Loxodon.Framework.Fody.PropertyChanged
+        run: |
+          cd $GITHUB_WORKSPACE/Loxodon.Framework.Fody/Packages/com.vovgou.loxodon-framework-fody-propertychanged
+          npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          npm publish
+        env:
+          CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: Publish Loxodon.Framework.Fody.ToString
+        run: |
+          cd $GITHUB_WORKSPACE/Loxodon.Framework.Fody/Packages/com.vovgou.loxodon-framework-fody-tostring
+          npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          npm publish
+        env:
+          CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: Publish Loxodon.Framework.Data
+        run: |
+          cd $GITHUB_WORKSPACE/Loxodon.Framework.Data/Packages/com.vovgou.loxodon-framework-data
+          npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          npm publish
+        env:
+          CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: Publish Loxodon.Framework.Data.LiteDB
+        run: |
+          cd $GITHUB_WORKSPACE/Loxodon.Framework.Data/Packages/com.vovgou.loxodon-framework-data-litedb
+          npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          npm publish
+        env:
+          CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: Publish Loxodon.Framework.Data.Newtonsoft
+        run: |
+          cd $GITHUB_WORKSPACE/Loxodon.Framework.Data/Packages/com.vovgou.loxodon-framework-data-newtonsoft
+          npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          npm publish
+        env:
+          CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+
