--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -28,8 +28,12 @@ jobs:
 
       - name: Publish Loxodon.Framework
         run: |
-          cd $GITHUB_WORKSPACE/Loxodon.Framework/Assets/LoxodonFramework          
+          cd $GITHUB_WORKSPACE/Loxodon.Framework/Assets/LoxodonFramework
+          npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
           npm publish
+        env:
+          CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: Publish Loxodon.Framework.Addressable
         run: |
