--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -22,18 +22,16 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: https://npm.pkg.github.com/
 
-      - run: npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
+      - run: |
+          npm config set registry https://npm.pkg.github.com/
+          npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: Publish Loxodon.Framework
         run: |
           cd $GITHUB_WORKSPACE/Loxodon.Framework/Assets/LoxodonFramework
-          npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
           npm publish
-        env:
-          CI: true
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: Publish Loxodon.Framework.Addressable
         run: |
