--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -22,10 +22,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: https://npm.pkg.github.com/vovgou
 
-      - run: |
-          npm config set registry https://npm.pkg.github.com/vovgou
+      - run: |          
           npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
+          npm config set registry https://npm.pkg.github.com/vovgou
         env:
+          CI: true
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: Publish Loxodon.Framework
