--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          registry-url: https://npm.pkg.github.com/vovgou
+          registry-url: https://npm.pkg.github.com
+          scope: '@vovgou'
 
       - run: |          
           npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
