--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
+          always-auth: true
           node-version: ${{ matrix.node-version }}
           registry-url: https://npm.pkg.github.com
           scope: '@vovgou'
