--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -23,6 +23,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: https://npm.pkg.github.com
           scope: '@vovgou'
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - run: |          
           npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
