--- a/Loxodon.Framework.TextMeshPro/Assets/LoxodonFramework/TextMeshPro/package.json
+++ b/Loxodon.Framework.TextMeshPro/Assets/LoxodonFramework/TextMeshPro/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.vovgou.loxodon-framework-textmeshpro",
   "displayName": "Loxodon Framework TextMeshPro",
-  "version": "2.6.2",
+  "version": "2.6.2-fixed",
   "unity": "2021.3",
   "description": "This is a plugin for the TextMeshPro.",
   "license": "MIT",
@@ -27,8 +27,8 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "com.vovgou.loxodon-framework": "2.6.2",
-    "com.vovgou.loxodon-framework-textformatting": "2.6.2",
+    "com.vovgou.loxodon-framework": "2.6.3",
+    "com.vovgou.loxodon-framework-textformatting": "2.6.3",
     "com.unity.textmeshpro": "1.4.1"
   },
   "samples": [
