--- a/Loxodon.Framework.TextMeshPro/Assets/LoxodonFramework/TextMeshPro/package.json
+++ b/Loxodon.Framework.TextMeshPro/Assets/LoxodonFramework/TextMeshPro/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.vovgou.loxodon-framework-textmeshpro",
   "displayName": "Loxodon Framework TextMeshPro",
-  "version": "2.6.2-fixed",
+  "version": "2.6.3",
   "unity": "2021.3",
   "description": "This is a plugin for the TextMeshPro.",
   "license": "MIT",
