Fixed a bug in Loxodon.Framework.TextUGUI.asmdef Fixed the issue that lua files could not be read due to UTF8 BOM.

--- a/Loxodon.Framework.TextUGUI/Assets/LoxodonFramework/TextUGUI/Editor/Loxodon.Framework.TextUGUI.Editor.asmdef
+++ b/Loxodon.Framework.TextUGUI/Assets/LoxodonFramework/TextUGUI/Editor/Loxodon.Framework.TextUGUI.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:2e49c12c2beb247448c9b585b6178fc4"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
